--- a/pages/ticket.html
+++ b/pages/ticket.html
@@ -51,8 +51,9 @@
       </section>
 
     </header>
-    <main class="container" style="width:60rem" >
+    <main class="container"  >
       
+    <div class="d-flex justify-content-center">
     <section id="tarjetas"> 
       <div class="container text-center mt-5 mb-5 ">
           <div class="row align-items-center ">
@@ -90,7 +91,10 @@
           </div>            
       </div>
     </section> 
-    <section id="comprarTicket">
+
+  </div>
+   <div class="d-flex justify-content-center">
+    <section  id="comprarTicket">
 
       <p class="text-center">VENTA</p>
       <h1 class="text-center mb-5">VALOR DE TICKET $200</h1>  
@@ -144,7 +148,7 @@
       <div>
         <div class="mt-3 col-md-12 bg-primary-subtle p-3 rounded" id="total">
           <p class="text-primary" >Total a Pagar:</p>
-          <p id="resultado">$200.00</p> 
+          <p id="resultado">$00.00</p> 
       </div > 
    
 
@@ -162,7 +166,9 @@
       </div>
   
   </form>
-    </section>  
+    </section>
+  </div>
+  
     <section class="mb-5 ">
       <h2 class="mb-5 mt-5">Tabla</h2>
       <div class="col-12 mt-3" >
